--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@tailwindcss/typography": "^0.5.10",
     "@tinymce/tinymce-react": "^4.3.0",
     "class-variance-authority": "^0.7.0",
@@ -23,13 +24,19 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "html-react-parser": "^5.0.6",
+    "katex": "^0.16.9",
     "lucide-react": "^0.290.0",
     "mongoose": "^8.0.1",
     "next": "13.5.6",
     "prettier": "^3.0.3",
+    "prismjs": "^1.29.0",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-katex": "^3.0.1",
+    "slugify": "^1.6.6",
     "svix": "^1.14.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
