--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.25.7",
+    "@clerk/nextjs": "^4.27.2",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tailwindcss/typography": "^0.5.10",
     "@tinymce/tinymce-react": "^4.3.0",
     "class-variance-authority": "^0.7.0",
@@ -28,7 +30,8 @@
     "katex": "^0.16.9",
     "lucide-react": "^0.290.0",
     "mongoose": "^8.0.1",
-    "next": "13.5.6",
+    "next": "14.0.3",
+    "npm-check-updates": "^16.14.11",
     "prettier": "^3.0.3",
     "prismjs": "^1.29.0",
     "query-string": "^8.1.0",
@@ -43,7 +46,9 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/katex": "^0.16.7",
     "@types/node": "^20",
+    "@types/prismjs": "^1.26.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
