--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "@tinymce/tinymce-react": "^4.3.0",
     "@uploadthing/react": "^6.0.2",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint-config-prettier": "^9.0.0",
@@ -32,6 +33,8 @@
     "lucide-react": "^0.290.0",
     "mongoose": "^8.0.1",
     "next": "14.0.3",
+    "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.7",
     "npm-check-updates": "^16.14.11",
     "prettier": "^3.0.3",
     "prismjs": "^1.29.0",
@@ -48,6 +51,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/katex": "^0.16.7",
     "@types/node": "^20",
     "@types/prismjs": "^1.26.3",
