pushing for test

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tinymce/tinymce-react": "^4.3.0",
     "@uploadthing/react": "^6.0.2",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint-config-prettier": "^9.0.0",
@@ -33,7 +34,7 @@
     "lucide-react": "^0.290.0",
     "mongoose": "^8.0.1",
     "next": "14.0.3",
-    "next-auth": "^4.24.5",
+    "next-auth": "^5.0.0-beta.4",
     "nodemailer": "^6.9.7",
     "npm-check-updates": "^16.14.11",
     "prettier": "^3.0.3",
@@ -48,16 +49,19 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.0.3",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/katex": "^0.16.7",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/prismjs": "^1.26.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
