--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "html-react-parser": "^5.0.6",
+    "html-to-text": "^9.0.5",
     "katex": "^0.16.9",
     "lucide-react": "^0.290.0",
     "mongoose": "^8.0.1",
@@ -57,6 +58,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/html-to-text": "^9.0.4",
     "@types/katex": "^0.16.7",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
